--- a/style.css
+++ b/style.css
@@ -11,14 +11,28 @@ font-face{
     padding: 0;
     box-sizing: border-box;
 }
-/* Header*/
-header{
-    background-color: transparent;
-    padding: 20px;
-    padding-left: 220px;
-    padding-right: 220px;
+body{
+    font-family: 'RotinsSansSerif', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+    color: #111;
 }
-.navbar{
+
+/* Header*/
+.page {
+    padding-top: 8px;
+}
+
+header {
+    width: 100%;
+    padding: 10px 18px;
+    padding-left: 120px;
+    padding-right: 120px;
+    position: relative;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar {
     display: flex;
     justify-content: space-evenly;
     gap: 70px;
@@ -29,11 +43,19 @@ header{
     padding-left: 70px;
     padding-right: 70px;
 }
-.botoesNav{
+
+.botoesNav {
     text-decoration: none;
-    color: black;
+    color: #222;
     font-size: 26px;
+    font-weight: 600;
 }
+
+.logo img {
+    vertical-align: middle;
+    display: block;
+}
+
 /*Header*/
 /**/
 /* Main*/
